# at2026

1/: CMakeLists.txt  main.cpp  shell.nix  speedtest.cpp
1/recognizer/: CMakeLists.txt  IRecognizer.h  Loader.cpp  Loader.h  Validator.cpp  Validator.h
1/recognizer/FlexRecognizer/: CMakeLists.txt  FlexRecognizer.cpp  FlexRecognizer.h  lex.yy.h  rec.lex
1/recognizer/RegexRecognizer/: CMakeLists.txt  RegexRecognizer.cpp  RegexRecognizer.h
1/recognizer/SMCRecognizer/: CMakeLists.txt  Smachine.cpp  Smachine.h  SmcRecognizer.cpp  SmcRecognizer.h  recognizer.sm
1/recognizer/Tests/: CMakeLists.txt  Recognizer_test.cc
2/: go.mod  main.go
2/myregex/: ast.go  ast_test.go  dfa.go  dfa_test.go  etc.go  go.mod  nfa.go  nodes.go  nodes_dfa.go  regex.go
